syntax = "proto3";    //指定proto版本3.x

package PlatPmd;  

enum PlatPmdCommand {  
	param_NullPmd			= 0x00;       //基础模块(网络包结构、心跳等协议)
	param_CommonPmd			= 0x10;       //公共模块
	param_LoginPmd			= 0x01;       //登入模块
	param_GamePmd			= 0x03;       //游戏模块


	param_DdzPmd			= 4;       //斗地主模块
} 